Three buttons have been created for basic tasks, for working with the input field template, and the Save button.